# nooforge-refiner

./: .gitignore  Cargo.toml  README.md  README_rust.md  annotated_text.txt  auto_tune.py  cli_openrouter.py  composer.py  config.py  docker-compose.yml  llm_cache.py  llm_iface.py  llm_local_satub.py  llm_openrouter.py  llm_seg.py  logger.py  models.py  pipeline.py  refine.py  requirements.txt  segmenter.py  structure.py
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/hybrid-rag/: Cargo.toml  INSTALLATION.md  RAG_GUIDE.md  README.md  README_old.md  SUMMARY.md  docker-compose.yml  download-models-alternative.ps1  download-models.ps1  download_models_resume.py
crates/hybrid-rag/data/: doc1.txt  doc2.txt
crates/hybrid-rag/notes/: mixed_torture_test.txt
crates/hybrid-rag/src/: chunking.rs  config.rs  embedding.rs  embedding_onnx.rs  ingest.rs  lib.rs  llm.rs  main.rs  onnx_cross_encoder.rs  onnx_embedder.rs  query.rs  reranking.rs  retrieval.rs  simple_ingest.rs
crates/llm-openrouter/: Cargo.toml
crates/llm-openrouter/src/: client.rs  lib.rs
crates/llm-traits/: Cargo.toml
crates/llm-traits/src/: lib.rs
crates/nooforge-axum-server/: Cargo.toml  README.md
crates/nooforge-axum-server/src/: api.rs  main.rs  model.rs  server_config.rs
crates/nooforge-axum-server/src/pipeline/: hybrid.rs  mod.rs
crates/nooforge-iced/: Cargo.toml  README.md
crates/nooforge-iced/src/: api.rs  app.rs  main.rs  utils.rs
crates/nooforge-iced/src/ui/: components.rs  mod.rs  tabs.rs
crates/nooforge_textseg_claude_ml/: Cargo.toml  README.md  mixed_torture_test_old.txt
crates/nooforge_textseg_claude_ml/src/: annotator.rs  lib.rs
crates/nooforge_textseg_claude_ml/src/prompts/: annotator_fewshot_v4_markers.txt  annotator_fewshot_v5_markers.txt  annotator_system_v4_markers.txt  annotator_system_v5_markers.txt
crates/prompts/: Cargo.toml
crates/prompts/prompts/composite/: system.txt  user.txt
crates/prompts/prompts/refine/: system.txt  user.txt
crates/prompts/prompts/unit_entities_topics/: system.txt  user.txt
crates/prompts/prompts/unit_keyphrases/: system.txt  user.txt
crates/prompts/prompts/unit_summary/: long_user.txt  short_user.txt  system.txt
crates/prompts/src/: lib.rs
crates/refiner-cli/: Cargo.toml
crates/refiner-cli/src/: main.rs
crates/refiner-core/: Cargo.toml
crates/refiner-core/src/: composer.rs  lib.rs  pipeline.rs  refine.rs  segmenter.rs  types.rs
llamaindex_full/: .env.example  123.py  README.md  config.py  docker-compose.yml  ingest.py  query.py  query_openrouter_minimal.py  requirements.txt  setup.ps1  setup.sh  setup_minimal.ps1
nooforge-solidjs/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
nooforge-solidjs/src/: App.tsx  index.css  index.tsx
nooforge-solidjs/src/components/: DropZone.tsx  Spinner.tsx  StatusDot.tsx
nooforge-solidjs/src/lib/: dnd.ts  path_to_file.ts  platform.ts  utils.ts  web-mock.ts
nooforge-solidjs/src/pages/: Ingest.tsx  Rag.tsx  Search.tsx
nooforge-solidjs/src/types/: ui.ts
nooforge-ui/: README.md
nooforge-ui-svelte/: index.html  package-lock.json  package.json
nooforge-ui-svelte/src/: App.svelte
nooforge-ui-svelte/src/components/: Spinner.svelte  StatusDot.svelte
nooforge-ui-svelte/src/lib/: tabs.ts
nooforge-ui-svelte/src/pages/: Ingest.svelte  Rag.svelte  Search.svelte
nooforge-ui-svelte/src/types/: ui.ts
nooforge-ui/src-tauri/: Cargo.toml  tauri.conf.json
nooforge-ui/src-tauri/src/: dnd.rs  lib.rs  main.rs
response_examples/: out.json  out_postgres_parts.json  out_tst04.json
samples/: ai_article.txt  in.txt  postgres_parts.txt  tst04.txt
