[package]
name = "refiner-cache"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
camino = { workspace = true }