[package]
name = "hybrid-rag"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","stream"] }
qdrant-client = "1.15"
tokenizers = "0.19"
rayon = "1.7"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
config = "0.13"
ort = { version = "1.16.3", features = ["cuda", "load-dynamic"]}
chrono = "0.4"
ndarray = "0.15"
clap = { version = "4.0", features = ["derive", "env"] }
sha1 = "0.10.6"
tonic = "0.14.2"
sha2.workspace = true
regex.workspace = true
unicode-segmentation.workspace = true
lazy_static = "1.5.0"
toml = "0.9.8"
futures-util = "0.3.31"
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4"

[features]
# default = []
# pdf = []
# docx = []
# full = []