[package]
name = "llm-openrouter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[features]
default = ["workspace-backend-openrouter"]
workspace-backend-openrouter = []


[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
llm-traits = { path = "../llm-traits" }
tracing = { workspace = true }
async-trait = { workspace = true }