[package]
name = "nooforge-axum-server"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace","set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
base64 = "0.22"
mime = "0.3"
bytes = "1"
async-trait = "0.1"
tempfile = "3"
chardetng = "0.1"
encoding_rs = "0.8"
http-body-util = "0.1"

hybrid-rag = { path = "../hybrid-rag" }
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
