[package]
name = "nooforge_textseg_claude_ml"
version = "0.4.0"
edition = "2021"
description = "Windowed UTF-8 byte-precise text segmentation with overlap-stable stitching and anchor recomputation over OpenRouter LLM"
license = "MIT"
repository = ""

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
