[package]
name = "refiner-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
llm-traits = { path = "../llm-traits" }
llm-openrouter = { path = "../llm-openrouter" }
refiner-core = { path = "../refiner-core" }
tokio = { workspace = true }