[package]
name = "refiner-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
unicode-segmentation = { workspace = true }
tracing = { workspace = true }
llm-traits = { path = "../llm-traits" }
refiner-cache = { path = "../cache" }
prompts = { path = "../prompts" }